--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+OPEN_WEATHER_API_KEY = "<7d6b4b9ee19e502d05cb2f635ee5b699>"
+
+
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
