--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
 buildTypes.each{
-    it.buildConfigField 'String', 'OPEN_WEATHER_API_KEY', OPEN_WEATHER_API_KEY
+    it.buildConfigField 'String', 'OPEN_WEATHER_API_KEY', "\" MyOpenWeatherApiKey \""
 }
 
 }
