--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-OPEN_WEATHER_API_KEY = "<7d6b4b9ee19e502d05cb2f635ee5b699>"
+MyOpenWeatherApiKey = "7d6b4b9ee19e502d05cb2f635ee5b699"
 
 
 # Project-wide Gradle settings.
