--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-MyOpenWeatherApiKey = "7d6b4b9ee19e502d05cb2f635ee5b699"
+API_KEY = "42b3e8166413cbbabd144fe3c3bba1ed"
 
 
 # Project-wide Gradle settings.
